--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,13 @@
 {
     "compilerOptions": {
-      "module": "ES2015",
-      "target": "ES2015",
-      "types": ["chrome"]
+        "module": "ES2015",
+        "target": "ES2015",
+        "types": ["chrome"],
+        
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["../src/*"]
+        }
     },
-    "exclude": ["node_modules"]
-  }
+    "exclude": ["node_modules", "dist"]
+}
